[gd_scene load_steps=8 format=3 uid="uid://bs87dibm1cwym"]

[ext_resource type="Script" uid="uid://dp6bwgk1biwmi" path="res://UI/Scripts/game_over.gd" id="1_12oxy"]
[ext_resource type="Texture2D" uid="uid://df23j40i6vg71" path="res://Resources/Assets/GameOver.png" id="2_jk7yr"]
[ext_resource type="Theme" uid="uid://cjk4ci1au4rg7" path="res://Resources/Themes/main_theme.tres" id="3_3oi8p"]
[ext_resource type="PackedScene" path="res://Globals/Components/CRT_viewport.tscn" id="4_m5uu3"]

[sub_resource type="Animation" id="Animation_15ds6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_gkfty"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_olasf"]
_data = {
&"RESET": SubResource("Animation_15ds6"),
&"fade_in": SubResource("Animation_gkfty")
}

[node name="GameOver" type="Node2D"]
script = ExtResource("1_12oxy")

[node name="GameOver" type="Sprite2D" parent="."]
position = Vector2(640.001, 287)
scale = Vector2(1.24805, 0.851562)
texture = ExtResource("2_jk7yr")

[node name="CenterContainer" type="CenterContainer" parent="GameOver"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -668.0
offset_top = -704.0
offset_right = -356.0
offset_bottom = -579.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="GameOver/CenterContainer"]
custom_minimum_size = Vector2(300, 125)
layout_mode = 2
alignment = 1

[node name="Play Again" type="Button" parent="GameOver/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
theme = ExtResource("3_3oi8p")
text = "Play Again"

[node name="Control" type="Control" parent="GameOver/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Main Menu" type="Button" parent="GameOver/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
theme = ExtResource("3_3oi8p")
text = "Menu"

[node name="Shader" type="CanvasLayer" parent="."]

[node name="SubViewportContainer" parent="Shader" instance=ExtResource("4_m5uu3")]
offset_right = 1280.0
offset_bottom = 720.0

[node name="FadeRect" type="ColorRect" parent="."]
z_index = 10
offset_left = -369.0
offset_top = -300.0
offset_right = 1560.0
offset_bottom = 925.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeRect"]
libraries = {
&"": SubResource("AnimationLibrary_olasf")
}
speed_scale = 0.3

[connection signal="mouse_entered" from="GameOver/CenterContainer/HBoxContainer/Play Again" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="GameOver/CenterContainer/HBoxContainer/Play Again" to="." method="_on_pressed_play_again"]
[connection signal="mouse_entered" from="GameOver/CenterContainer/HBoxContainer/Main Menu" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="GameOver/CenterContainer/HBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
